--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/main-link.css">
+  <link rel="stylesheet" href="css/navigation.css">
 </head>
 
 <body>
