--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/main-link.css">
   <link rel="stylesheet" href="css/navigation.css">
+  <link rel="stylesheet" href="css/hero.css">
+  <link rel="stylesheet" href="css/price.css">
+  <link rel="stylesheet" href="css/slider.css">
 </head>
 
 <body>
