--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/price.css">
   <link rel="stylesheet" href="css/slider.css">
+  <link rel="stylesheet" href="css/about.css">
 </head>
 
 <body>
