--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="css/price.css">
   <link rel="stylesheet" href="css/slider.css">
   <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/radio.css">
+  <link rel="stylesheet" href="css/reserve.css">
 </head>
 
 <body>
