--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chik-chik | BarberSop</title>
 
-  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/preload.css">
   <link rel="stylesheet" href="css/main-link.css">
   <link rel="stylesheet" href="css/navigation.css">
   <link rel="stylesheet" href="css/hero.css">
@@ -18,6 +19,8 @@
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/radio.css">
   <link rel="stylesheet" href="css/reserve.css">
+
+  <script src="/js/script.js"></script>
 </head>
 
 <body>
