fix HTML for BEM

--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
 
       <ul class="footer__autors autors">
         <li class="autors__designer">
-          <a href="#" class="autors__designer_name">Designer: Anastasia Ilina</a>
+          <a href="#" class="autors__designer-name">Designer: Anastasia Ilina</a>
         </li>
         <li class="autors__developper">
-          <a href="#" class="autors__developper_name">Developer: Konstantin Ann</a>
+          <a href="#" class="autors__developper-name">Developer: Konstantin Ann</a>
         </li>
       </ul>
 
