--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/radio.css">
   <link rel="stylesheet" href="css/reserve.css">
+  <link rel="stylesheet" href="css/footer.css">
 
   <script src="/js/script.js"></script>
 </head>
@@ -142,7 +143,7 @@
           </li>
           <li class="about__item about__item_master">
             <h3 class="about__item-title">Мастера бород и усов</h3>
-            <p class="about__item-description">Мы заботливо уложим вашу бороду и усы</p>
+            <p class="about__item-description">Мы заботливо уложим вашу бороду и&nbsp;усы</p>
           </li>
           <li class="about__item about__item_guaranty">
             <h3 class="about__item-title">Гарантия качества</h3>
@@ -166,31 +167,31 @@
             <fieldset class="reserve__fieldset">
               <legend class="reserve__legend">Услуга</legend>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Стрижка ножницами</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Стрижка машинкой</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Стрижка + Стрижка бороды</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Стрижка + Моделирование бороды</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Бритье головы</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Укладка</span>
               </label>
               <label class="radio">
-                <input class="radio__input" type="checkbox" name="service">
+                <input class="radio__input" type="radio" name="service">
                 <span class="radio__label">Оформление бровей</span>
               </label>
             </fieldset>
@@ -296,29 +297,34 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="footer__logo" src="img/logo.svg" alt="Логотип барбершоп Chik-chik">
+      <div class="footer__container">
+        <img class="footer__logo" src="img/logo.svg" alt="Логотип барбершоп Chik-chik">
 
-      <nav class="footer__navigation navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="#price" class="navigation__link">Cтоимость услуг</a>
+        <div class="footer__navigation navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="#price" class="navigation__link">Cтоимость услуг</a>
+            </li>
+
+            <li class="navigation__item">
+              <a href="#about" class="navigation__link">О нас</a>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="footer__autors autors">
+          <li class="autors__designer">
+            <a href="#" class="autors__designer-name">Designer: Anastasia Ilina</a>
           </li>
-          <li class="navigation__item">
-            <a href="#about" class="navigation__link">О нас</a>
+          <li class="autors__developper">
+            <a href="#" class="autors__developper-name">Developer: Konstantin Ann</a>
           </li>
         </ul>
-      </nav>
 
-      <ul class="footer__autors autors">
-        <li class="autors__designer">
-          <a href="#" class="autors__designer-name">Designer: Anastasia Ilina</a>
-        </li>
-        <li class="autors__developper">
-          <a href="#" class="autors__developper-name">Developer: Konstantin Ann</a>
-        </li>
-      </ul>
-
-      <p class="footer__copyright">© chik chik, 2023</p>
+        <p class="footer__copyright">
+          <small class="footer__copyright-info">© chik chik, 2023</small>
+        </p>
+      </div>
     </div>
   </footer>
 </body>
